[package]
name = "pngbomb"
version = "0.1.0"
authors = ["liclac <hi@liclac.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
png = "^0.18"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
crc32fast = "^1.5"
pbr = "^1.0"
serde = "^1.0"
docopt = "^1.1"
